# PersonalAssistant

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  ImplementationRoadmap.md  LICENSE  README.md  RiskAssesmentandMitigationStrategies.md  TechnologyStackAnalysis.md  archi-technicalrequirement.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: agent_enhancement.md  bug_report.md  config.yml  feature_request.md  integration_request.md  performance_issue.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml
docs/: RELEASE_NOTES.md  USAGE.md
docs/adr/: 0000-template.md  0001-choose-rabbitmq.md  0001-microservices-architecture.md  0002-neo4j-knowledge-graph.md
docs/validation/: README.md  TEMPLATE.md
docs/validation/logs/: 2025-01-15-voice-hud-agents.md  TEMPLATE.md
infra/: docker-compose.override.yml  docker-compose.yml
libs/archi_core/: README.md  pyproject.toml
libs/archi_core/archi_core/: __init__.py  config.py  logging.py  messaging.py  schemas.py
scripts/: consume_test_message.py  down.ps1  lint.ps1  publish_test_message.py  test.ps1  up.ps1
services/: README.md
services/cua/: main.py
services/cua_engine/: Dockerfile  __init__.py  application_controller.py  main.py  requirements.txt  screen_analyzer.py  workflow_executor.py
services/execution_agent/: Dockerfile  main.py
services/external_services/: integration.py
services/hud_overlay/: Dockerfile  __init__.py  main.py  notification_system.py  overlay_manager.py  requirements.txt
services/hud_overlay_agent/: Dockerfile  main.py
services/knowledge_graph/: main.py
services/learning_agent/: Dockerfile  main.py
services/memory_agent/: Dockerfile  main.py
services/multi_agent/: main.py
services/orchestrator/: Dockerfile  __init__.py  main.py  requirements.txt
services/performance/: monitoring.py
services/planning_agent/: Dockerfile  main.py
services/security_agent/: Dockerfile  main.py
services/tool_creation_agent/: Dockerfile  main.py
services/voice_engine/: Dockerfile  __init__.py  audio_manager.py  main.py  requirements.txt  voice_processor.py
services/voice_processing/: main.py
services/voice_processing_agent/: Dockerfile  main.py
tests/: test_health_endpoints.py  test_integration.py
ui/: main.py
