[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "T20", "ISC", "PT", "RET", "SIM", "PTH", "RUF"]
ignore = ["E501"]
exclude = ["venv", "build", "dist", ".git", ".venv"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
branch = true
source = ["libs", "services"]

[project]
name = "PersonalAssistant"
version = "0.1"
description = "Archi AI Digital Twin System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "neo4j",
    "pika",
    "pvporcupine",
    "sounddevice",
    "pygetwindow",
    "pyautogui",
    "opencv-python",
    "numpy"
]

[project.scripts]
start-assistant = "services.voice_processing.main:start_hud_overlay"
