[project]
name = "archi-core"
version = "0.1.0"
description = "Shared core library for Archi AI system"
requires-python = ">=3.11"
authors = [{name = "Archi Team"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pika>=1.3",
  "fastapi>=0.111",
  "uvicorn[standard]",
  "loguru>=0.7",
  "python-dotenv>=1.0",
  "neo4j>=5.22"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
